fizzbuzz solved, more js practice

--- a/app/views/misc/home.html.erb
+++ b/app/views/misc/home.html.erb
@@ -7,11 +7,18 @@
   <li id="lax" class="west">Los Angeles</li>
   <li id="jfk" class="east">New York</li>
   <li id="sfo" class="west">San Francisco</li>
+  <li id="den" class="midwest">Denver</li>
+  <li id="org" class="west">Oregon</li>
+  <li id="atl" class="south">Atlanta</li>
 </ul>
 
 <script>
-  // Write your JS here.
-  // Open the JS console and refresh the page to see the output.
 
-  
+for (var i = 1; i < 101; i++) {
+    if (i % 15 == 0) console.log("FizzBuzz");
+    else if (i % 3 == 0) console.log("Fizz");
+    else if (i % 5 == 0) console.log("Buzz");
+    else console.log(i);
+}
+
 </script>
